# test_documentation_sphinx_site

./: .buildinfo  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  api-guide.html  architecture.html  docker-compose.yaml  genindex.html  getting-started.html  index.html  objects.inv  outputs.html  overview.html  prepush_check.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  update_conf.py
.doctrees/: api-guide.doctree  architecture.doctree  environment.pickle  getting-started.doctree  index.doctree  outputs.doctree  overview.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/src/: index.doctree
.github/workflows/: docs.yml
.gitlab/ci/: build.yml
_modules/: index.html
_modules/src/config/: log_config.html
_modules/src/models/: repo_request.html
_sources/: index.rst.txt  outputs.rst.txt  overview.rst.txt
_static/: custom.css
autoapi/: index.html
autoapi/src/: index.html
autoapi_include/: conf.py  docstring_generation.py  docstring_validation.py  git_utils.py  models___init__.py  router_router.py  services_doc_services.py  utils_generate_yml_content.py  utils_git_utils.py
docs/: CNAME  Makefile
docs/source/: api-guide.rst  architecture.rst  getting-started.rst
src/: __init__.py  main.py
src/config/: config.py  log_config.py
src/models/: repo_request.py
src/router/: router.py
src/services/: sphinx_services.py
src/utils/: code_block_extraction.py  git_utils.py  update_conf_content.py
tests/: test_code_block_extraction.py  test_docstring_validation.py  test_git_utils.py  test_router.py
(+63 files in other folders)
